MDEV-31086 MODIFY COLUMN can break FK constraints, and lead to unrestorable dumps

ha_innobase::check_if_supported_inplace_alter(): Doesn't support
the column modification when the column is involved in
foreign key relationship. This behaviour applies when
foreign_key_checks is enabled.